--- a/Project/handling_catagorical_data.ipynb
+++ b/Project/handling_catagorical_data.ipynb
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "id": "489fb068",
    "metadata": {},
    "outputs": [
@@ -573,24 +573,51 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th></th>\n",
-       "      <th colspan=\"2\" halign=\"left\">mean</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">std</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">min</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">max</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">mean</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">std</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">min</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">max</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
-       "      <th>temperature_c</th>\n",
-       "      <th>unemployment</th>\n",
-       "      <th>temperature_c</th>\n",
-       "      <th>unemployment</th>\n",
-       "      <th>temperature_c</th>\n",
-       "      <th>unemployment</th>\n",
-       "      <th>temperature_c</th>\n",
-       "      <th>unemployment</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">temperature_c</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">unemployment</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">temperature_c</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">unemployment</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">temperature_c</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">unemployment</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">temperature_c</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">unemployment</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>is_holiday</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -604,45 +631,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A</th>\n",
-       "      <td>15.231333</td>\n",
-       "      <td>7.972611</td>\n",
-       "      <td>9.879783</td>\n",
-       "      <td>0.521748</td>\n",
+       "      <td>15.247873</td>\n",
+       "      <td>11.165833</td>\n",
+       "      <td>7.973170</td>\n",
+       "      <td>7.8351</td>\n",
+       "      <td>9.877466</td>\n",
+       "      <td>9.727681</td>\n",
+       "      <td>0.520651</td>\n",
+       "      <td>0.740173</td>\n",
        "      <td>-8.366667</td>\n",
+       "      <td>-5.488889</td>\n",
        "      <td>3.879</td>\n",
+       "      <td>5.143</td>\n",
        "      <td>33.300000</td>\n",
+       "      <td>26.277778</td>\n",
+       "      <td>8.992</td>\n",
        "      <td>8.992</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>21.211327</td>\n",
-       "      <td>9.279323</td>\n",
-       "      <td>8.661237</td>\n",
-       "      <td>0.335157</td>\n",
+       "      <td>21.208636</td>\n",
+       "      <td>22.422222</td>\n",
+       "      <td>9.280973</td>\n",
+       "      <td>8.5365</td>\n",
+       "      <td>8.665274</td>\n",
+       "      <td>9.176675</td>\n",
+       "      <td>0.332225</td>\n",
+       "      <td>0.936916</td>\n",
        "      <td>6.350000</td>\n",
+       "      <td>15.933333</td>\n",
        "      <td>7.170</td>\n",
+       "      <td>7.874</td>\n",
        "      <td>33.827778</td>\n",
+       "      <td>28.911111</td>\n",
        "      <td>9.765</td>\n",
+       "      <td>9.199</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              mean                        std                        min  \\\n",
-       "     temperature_c unemployment temperature_c unemployment temperature_c   \n",
-       "type                                                                       \n",
-       "A        15.231333     7.972611      9.879783     0.521748     -8.366667   \n",
-       "B        21.211327     9.279323      8.661237     0.335157      6.350000   \n",
+       "                    mean                                           std  \\\n",
+       "           temperature_c            unemployment         temperature_c   \n",
+       "is_holiday         False      True         False   True          False   \n",
+       "type                                                                     \n",
+       "A              15.247873  11.165833     7.973170  7.8351      9.877466   \n",
+       "B              21.208636  22.422222     9.280973  8.5365      8.665274   \n",
        "\n",
-       "                            max               \n",
-       "     unemployment temperature_c unemployment  \n",
-       "type                                          \n",
-       "A           3.879     33.300000        8.992  \n",
-       "B           7.170     33.827778        9.765  "
+       "                                                      min             \\\n",
+       "                     unemployment           temperature_c              \n",
+       "is_holiday     True         False     True          False      True    \n",
+       "type                                                                   \n",
+       "A           9.727681     0.520651  0.740173     -8.366667  -5.488889   \n",
+       "B           9.176675     0.332225  0.936916      6.350000  15.933333   \n",
+       "\n",
+       "                                         max                                 \n",
+       "           unemployment        temperature_c            unemployment         \n",
+       "is_holiday        False  True          False      True         False  True   \n",
+       "type                                                                         \n",
+       "A                 3.879  5.143     33.300000  26.277778        8.992  8.992  \n",
+       "B                 7.170  7.874     33.827778  28.911111        9.765  9.199  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,8 +703,12 @@
     "grp_sale = sales_data.pivot_table(\n",
     "    index='type', \n",
     "    values=['temperature_c','unemployment'], \n",
-    "    aggfunc=['mean', 'std', 'min', 'max'])\n",
-    "grp_sale.head()\n"
+    "    aggfunc=['mean', 'std', 'min', 'max'],\n",
+    "    columns =  ['is_holiday'])\n",
+    "grp_sale.head(10)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
