--- a/Project/handling_catagorical_data.ipynb
+++ b/Project/handling_catagorical_data.ipynb
@@ -521,29 +521,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "b305c780",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['store', 'type', 'department', 'date', 'weekly_sales', 'is_holiday',\n",
-       "       'temperature_c', 'fuel_price_usd_per_l', 'unemployment'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sales_data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 63,
    "id": "489fb068",
    "metadata": {},
@@ -709,6 +686,30 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "292b93e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         date  weekly_sales\n",
+      "1  2010-03-05      21827.90\n",
+      "2  2010-04-02      57258.43\n",
+      "3  2010-05-07      17413.94\n",
+      "4  2010-06-04      17558.09\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Fos slicing row\n",
+    "Row = sales_data.iloc[1:5,3:5]\n",
+    "print(Row)"
    ]
   }
  ],
