--- a/Project/handling_catagorical_data.ipynb
+++ b/Project/handling_catagorical_data.ipynb
@@ -707,9 +707,40 @@
     }
    ],
    "source": [
-    "#Fos slicing row\n",
+    "#For slicing row\n",
     "Row = sales_data.iloc[1:5,3:5]\n",
     "print(Row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "bfdf946d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 'A', 1, ..., 5.727777777777779, 0.6794508388787476, 8.106],\n",
+       "       [1, 'A', 1, ..., 8.055555555555555, 0.693451964252221, 8.106],\n",
+       "       [1, 'A', 1, ..., 16.81666666666667, 0.718284148876872, 7.808],\n",
+       "       ...,\n",
+       "       [39, 'A', 99, ..., 27.28888888888889, 0.911922354513778, 6.989],\n",
+       "       [39, 'A', 99, ..., 25.64444444444444, 0.8601446078496121,\n",
+       "        6.622999999999999],\n",
+       "       [39, 'A', 99, ..., 22.25, 0.955510763695346, 6.228]],\n",
+       "      shape=(10774, 9), dtype=object)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#For slicing row\n",
+    "sales_data.values\n",
+    "\n"
    ]
   }
  ],
