add handling update7

--- a/Project/handling_catagorical_data.ipynb
+++ b/Project/handling_catagorical_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "87c40f6b",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "      <td>False</td>\n",
        "      <td>5.727778</td>\n",
        "      <td>0.679451</td>\n",
-       "      <td>8.106</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -212,7 +212,7 @@
        "99          99      1    A           9  2010-05-07      27588.34       False   \n",
        "\n",
        "    temperature_c  fuel_price_usd_per_l  unemployment  \n",
-       "0        5.727778              0.679451         8.106  \n",
+       "0        5.727778              0.679451           NaN  \n",
        "1        8.055556              0.693452         8.106  \n",
        "2       16.816667              0.718284         7.808  \n",
        "3       22.527778              0.748928         7.808  \n",
@@ -227,7 +227,7 @@
        "[100 rows x 10 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "839dee38",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "id": "9136f1b6",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
        "      <td>False</td>\n",
        "      <td>5.727778</td>\n",
        "      <td>0.679451</td>\n",
-       "      <td>8.106</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -391,14 +391,14 @@
        "4      1    A           1  2010-06-04      17558.09       False   \n",
        "\n",
        "   temperature_c  fuel_price_usd_per_l  unemployment  \n",
-       "0       5.727778              0.679451         8.106  \n",
+       "0       5.727778              0.679451           NaN  \n",
        "1       8.055556              0.693452         8.106  \n",
        "2      16.816667              0.718284         7.808  \n",
        "3      22.527778              0.748928         7.808  \n",
        "4      27.050000              0.714586         7.808  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "id": "8ed48c2f",
    "metadata": {},
    "outputs": [
@@ -470,12 +470,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A</th>\n",
-       "      <td>23674.667242</td>\n",
-       "      <td>30129.407656</td>\n",
+       "      <td>23672.366891</td>\n",
+       "      <td>30130.066966</td>\n",
        "      <td>-1098.0</td>\n",
        "      <td>293966.05</td>\n",
-       "      <td>7.972611</td>\n",
-       "      <td>0.521748</td>\n",
+       "      <td>7.972616</td>\n",
+       "      <td>0.521796</td>\n",
        "      <td>3.879</td>\n",
        "      <td>8.992</td>\n",
        "    </tr>\n",
@@ -498,7 +498,7 @@
        "      weekly_sales                                  unemployment            \\\n",
        "              mean           std     min        max         mean       std   \n",
        "type                                                                         \n",
-       "A     23674.667242  30129.407656 -1098.0  293966.05     7.972611  0.521748   \n",
+       "A     23672.366891  30130.066966 -1098.0  293966.05     7.972616  0.521796   \n",
        "B     25696.678370  31155.867745  -798.0  232558.51     9.279323  0.335157   \n",
        "\n",
        "                    \n",
@@ -508,7 +508,7 @@
        "B     7.170  9.765  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 31,
    "id": "489fb068",
    "metadata": {},
    "outputs": [
@@ -610,11 +610,11 @@
        "      <th>A</th>\n",
        "      <td>15.247873</td>\n",
        "      <td>11.165833</td>\n",
-       "      <td>7.973170</td>\n",
+       "      <td>7.973175</td>\n",
        "      <td>7.8351</td>\n",
        "      <td>9.877466</td>\n",
        "      <td>9.727681</td>\n",
-       "      <td>0.520651</td>\n",
+       "      <td>0.520699</td>\n",
        "      <td>0.740173</td>\n",
        "      <td>-8.366667</td>\n",
        "      <td>-5.488889</td>\n",
@@ -653,14 +653,14 @@
        "           temperature_c            unemployment         temperature_c   \n",
        "is_holiday         False      True         False   True          False   \n",
        "type                                                                     \n",
-       "A              15.247873  11.165833     7.973170  7.8351      9.877466   \n",
+       "A              15.247873  11.165833     7.973175  7.8351      9.877466   \n",
        "B              21.208636  22.422222     9.280973  8.5365      8.665274   \n",
        "\n",
        "                                                      min             \\\n",
        "                     unemployment           temperature_c              \n",
        "is_holiday     True         False     True          False      True    \n",
        "type                                                                   \n",
-       "A           9.727681     0.520651  0.740173     -8.366667  -5.488889   \n",
+       "A           9.727681     0.520699  0.740173     -8.366667  -5.488889   \n",
        "B           9.176675     0.332225  0.936916      6.350000  15.933333   \n",
        "\n",
        "                                         max                                 \n",
@@ -671,7 +671,7 @@
        "B                 7.170  7.874     33.827778  28.911111        9.765  9.199  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "292b93e9",
    "metadata": {},
    "outputs": [
@@ -714,14 +714,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "id": "bfdf946d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 'A', 1, ..., 5.727777777777779, 0.6794508388787476, 8.106],\n",
+       "array([[1, 'A', 1, ..., 5.727777777777779, 0.6794508388787476, nan],\n",
        "       [1, 'A', 1, ..., 8.055555555555555, 0.693451964252221, 8.106],\n",
        "       [1, 'A', 1, ..., 16.81666666666667, 0.718284148876872, 7.808],\n",
        "       ...,\n",
@@ -732,7 +732,7 @@
        "      shape=(10774, 9), dtype=object)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,6 +741,169 @@
     "#For slicing row\n",
     "sales_data.values\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1f952257",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10774 entries, 0 to 10773\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   store                 10774 non-null  int64  \n",
+      " 1   type                  10774 non-null  object \n",
+      " 2   department            10774 non-null  int64  \n",
+      " 3   date                  10774 non-null  object \n",
+      " 4   weekly_sales          10773 non-null  float64\n",
+      " 5   is_holiday            10774 non-null  bool   \n",
+      " 6   temperature_c         10774 non-null  float64\n",
+      " 7   fuel_price_usd_per_l  10774 non-null  float64\n",
+      " 8   unemployment          10772 non-null  float64\n",
+      "dtypes: bool(1), float64(4), int64(2), object(2)\n",
+      "memory usage: 684.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales_data.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "40f4c3c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "store                   0\n",
+      "type                    0\n",
+      "department              0\n",
+      "date                    0\n",
+      "weekly_sales            1\n",
+      "is_holiday              0\n",
+      "temperature_c           0\n",
+      "fuel_price_usd_per_l    0\n",
+      "unemployment            2\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "mask = sales_data.isnull()\n",
+    "print(mask.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "859ab693",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store</th>\n",
+       "      <th>type</th>\n",
+       "      <th>department</th>\n",
+       "      <th>date</th>\n",
+       "      <th>weekly_sales</th>\n",
+       "      <th>is_holiday</th>\n",
+       "      <th>temperature_c</th>\n",
+       "      <th>fuel_price_usd_per_l</th>\n",
+       "      <th>unemployment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>24924.50</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.727778</td>\n",
+       "      <td>0.679451</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2010-08-06</td>\n",
+       "      <td>50031.73</td>\n",
+       "      <td>False</td>\n",
+       "      <td>30.644444</td>\n",
+       "      <td>0.693980</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2010-11-05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>14.855556</td>\n",
+       "      <td>0.710359</td>\n",
+       "      <td>7.838</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    store type  department        date  weekly_sales  is_holiday  \\\n",
+       "0       1    A           1  2010-02-05      24924.50       False   \n",
+       "18      1    A           2  2010-08-06      50031.73       False   \n",
+       "21      1    A           2  2010-11-05           NaN       False   \n",
+       "\n",
+       "    temperature_c  fuel_price_usd_per_l  unemployment  \n",
+       "0        5.727778              0.679451           NaN  \n",
+       "18      30.644444              0.693980           NaN  \n",
+       "21      14.855556              0.710359         7.838  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#how to check missing values\n",
+    "\n",
+    "sales_data[sales_data.isnull().any(axis=1)]\n"
    ]
   }
  ],
