add handling update8

--- a/Project/handling_catagorical_data.ipynb
+++ b/Project/handling_catagorical_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 144,
    "id": "87c40f6b",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "[100 rows x 10 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 145,
    "id": "839dee38",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 146,
    "id": "9136f1b6",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
        "4      27.050000              0.714586         7.808  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 147,
    "id": "8ed48c2f",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
        "B     7.170  9.765  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 148,
    "id": "489fb068",
    "metadata": {},
    "outputs": [
@@ -671,7 +671,7 @@
        "B                 7.170  7.874     33.827778  28.911111        9.765  9.199  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 149,
    "id": "292b93e9",
    "metadata": {},
    "outputs": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 150,
    "id": "bfdf946d",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
        "      shape=(10774, 9), dtype=object)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 151,
    "id": "1f952257",
    "metadata": {},
    "outputs": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 152,
    "id": "40f4c3c5",
    "metadata": {},
    "outputs": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 153,
    "id": "859ab693",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
        "21      14.855556              0.710359         7.838  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,6 +905,88 @@
     "\n",
     "sales_data[sales_data.isnull().any(axis=1)]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "969870b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        8.082034\n",
+      "1        8.106000\n",
+      "2        7.808000\n",
+      "3        7.808000\n",
+      "4        7.808000\n",
+      "           ...   \n",
+      "10769    7.716000\n",
+      "10770    7.244000\n",
+      "10771    6.989000\n",
+      "10772    6.623000\n",
+      "10773    6.228000\n",
+      "Name: unemployment, Length: 10774, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales_data= sales_data['unemployment'].fillna(\n",
+    "    value= sales_data['unemployment'].mean()\n",
+    ")\n",
+    "print(sales_data)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "3b6130a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     8.082034\n",
+       "1     8.106000\n",
+       "2     7.808000\n",
+       "3     7.808000\n",
+       "4     7.808000\n",
+       "5     7.787000\n",
+       "6     7.787000\n",
+       "7     7.787000\n",
+       "8     7.838000\n",
+       "9     7.838000\n",
+       "10    7.838000\n",
+       "11    7.742000\n",
+       "12    8.106000\n",
+       "13    8.106000\n",
+       "14    7.808000\n",
+       "15    7.808000\n",
+       "16    7.808000\n",
+       "17    7.787000\n",
+       "18    8.082034\n",
+       "19    7.787000\n",
+       "Name: unemployment, dtype: float64"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_data.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c54d39fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
