add handling update9

--- a/Project/handling_catagorical_data.ipynb
+++ b/Project/handling_catagorical_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 475,
    "id": "87c40f6b",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "[100 rows x 10 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 475,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 476,
    "id": "839dee38",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 476,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 477,
    "id": "9136f1b6",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
        "4      27.050000              0.714586         7.808  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 477,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 478,
    "id": "8ed48c2f",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
        "B     7.170  9.765  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 478,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 479,
    "id": "489fb068",
    "metadata": {},
    "outputs": [
@@ -671,7 +671,7 @@
        "B                 7.170  7.874     33.827778  28.911111        9.765  9.199  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 479,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 480,
    "id": "292b93e9",
    "metadata": {},
    "outputs": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 481,
    "id": "bfdf946d",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
        "      shape=(10774, 9), dtype=object)"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 481,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 482,
    "id": "1f952257",
    "metadata": {},
    "outputs": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 483,
    "id": "40f4c3c5",
    "metadata": {},
    "outputs": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 484,
    "id": "859ab693",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
        "21      14.855556              0.710359         7.838  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 484,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 485,
    "id": "969870b2",
    "metadata": {},
    "outputs": [
@@ -932,16 +932,24 @@
     }
    ],
    "source": [
-    "sales_data= sales_data['unemployment'].fillna(\n",
-    "    value= sales_data['unemployment'].mean()\n",
+    "#how to replace null values using average values\n",
+    "\n",
+    "# sales_data['unemployment'].fillna(\n",
+    "#     value = sales_data['unemployment'].mean()\n",
+    "# )\n",
+    "sales_data = sales_data['unemployment'].fillna(\n",
+    "    value = sales_data['unemployment'].mean()\n",
     ")\n",
     "print(sales_data)\n",
+    "   \n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 488,
    "id": "3b6130a3",
    "metadata": {},
    "outputs": [
@@ -971,22 +979,55 @@
        "Name: unemployment, dtype: float64"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 488,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sales_data.head(20)"
+    "sales_data.head(20)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c54d39fc",
+   "execution_count": 496,
+   "id": "7f5b6401",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     False\n",
+       "1     False\n",
+       "2     False\n",
+       "3     False\n",
+       "4     False\n",
+       "5     False\n",
+       "6     False\n",
+       "7     False\n",
+       "8     False\n",
+       "9     False\n",
+       "10    False\n",
+       "11    False\n",
+       "12    False\n",
+       "13    False\n",
+       "14    False\n",
+       "15    False\n",
+       "16    False\n",
+       "17    False\n",
+       "18    False\n",
+       "19    False\n",
+       "Name: unemployment, dtype: bool"
+      ]
+     },
+     "execution_count": 496,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_data.isnull().head(20)\n"
+   ]
   }
  ],
  "metadata": {
