--- a/Project/handling_catagorical_data.ipynb
+++ b/Project/handling_catagorical_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 620,
    "id": "87c40f6b",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "[100 rows x 10 columns]"
       ]
      },
-     "execution_count": 497,
+     "execution_count": 620,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 621,
    "id": "839dee38",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 498,
+     "execution_count": 621,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 622,
    "id": "9136f1b6",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
        "4      27.050000              0.714586         7.808  "
       ]
      },
-     "execution_count": 499,
+     "execution_count": 622,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 623,
    "id": "8ed48c2f",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
        "B     7.170  9.765  "
       ]
      },
-     "execution_count": 500,
+     "execution_count": 623,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 624,
    "id": "489fb068",
    "metadata": {},
    "outputs": [
@@ -671,7 +671,7 @@
        "B                 7.170  7.874     33.827778  28.911111        9.765  9.199  "
       ]
      },
-     "execution_count": 501,
+     "execution_count": 624,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 625,
    "id": "292b93e9",
    "metadata": {},
    "outputs": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 626,
    "id": "bfdf946d",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
        "      shape=(10774, 9), dtype=object)"
       ]
      },
-     "execution_count": 503,
+     "execution_count": 626,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 627,
    "id": "1f952257",
    "metadata": {},
    "outputs": [
@@ -777,8 +777,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1242447e",
+   "metadata": {},
+   "source": [
+    "Identify Null values and Replace null values or remove \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 628,
    "id": "40f4c3c5",
    "metadata": {},
    "outputs": [
@@ -806,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 629,
    "id": "859ab693",
    "metadata": {},
    "outputs": [
@@ -895,7 +903,7 @@
        "21      14.855556              0.710359         7.838  "
       ]
      },
-     "execution_count": 506,
+     "execution_count": 629,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 630,
    "id": "969870b2",
    "metadata": {},
    "outputs": [
@@ -949,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 631,
    "id": "3b6130a3",
    "metadata": {},
    "outputs": [
@@ -979,7 +987,7 @@
        "Name: unemployment, dtype: float64"
       ]
      },
-     "execution_count": 508,
+     "execution_count": 631,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 632,
    "id": "7f5b6401",
    "metadata": {},
    "outputs": [
@@ -1020,7 +1028,7 @@
        "Name: unemployment, dtype: bool"
       ]
      },
-     "execution_count": 509,
+     "execution_count": 632,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 633,
    "id": "743930ac",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1060,7 @@
        "Name: unemployment, Length: 10774, dtype: float64"
       ]
      },
-     "execution_count": 510,
+     "execution_count": 633,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 634,
    "id": "9746984f",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1092,7 @@
        "Name: unemployment, Length: 10774, dtype: float64"
       ]
      },
-     "execution_count": 522,
+     "execution_count": 634,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 635,
    "id": "b2dcc5a7",
    "metadata": {},
    "outputs": [
@@ -1519,7 +1527,7 @@
        "24       5.727778              0.679451         8.106  "
       ]
      },
-     "execution_count": 526,
+     "execution_count": 635,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,229 +1539,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 636,
+   "id": "88dcb69d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        8.082034\n",
+      "1        8.106000\n",
+      "2        7.808000\n",
+      "3        7.808000\n",
+      "4        7.808000\n",
+      "           ...   \n",
+      "10769    7.716000\n",
+      "10770    7.244000\n",
+      "10771    6.989000\n",
+      "10772    6.623000\n",
+      "10773    6.228000\n",
+      "Name: unemployment, Length: 10774, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales_data = sales_data['unemployment'].fillna(\n",
+    "    value = sales_data['unemployment'].mean()\n",
+    ")\n",
+    "print(sales_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 637,
+   "id": "a186bcb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     8.082034\n",
+       "1     8.106000\n",
+       "2     7.808000\n",
+       "3     7.808000\n",
+       "4     7.808000\n",
+       "5     7.787000\n",
+       "6     7.787000\n",
+       "7     7.787000\n",
+       "8     7.838000\n",
+       "9     7.838000\n",
+       "10    7.838000\n",
+       "11    7.742000\n",
+       "12    8.106000\n",
+       "13    8.106000\n",
+       "14    7.808000\n",
+       "15    7.808000\n",
+       "16    7.808000\n",
+       "17    7.787000\n",
+       "18    8.082034\n",
+       "19    7.787000\n",
+       "20    7.838000\n",
+       "21    7.838000\n",
+       "22    7.838000\n",
+       "23    7.742000\n",
+       "24    8.106000\n",
+       "Name: unemployment, dtype: float64"
+      ]
+     },
+     "execution_count": 637,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_data.head(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 638,
    "id": "1db69d2e",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>store</th>\n",
-       "      <th>type</th>\n",
-       "      <th>department</th>\n",
-       "      <th>date</th>\n",
-       "      <th>weekly_sales</th>\n",
-       "      <th>is_holiday</th>\n",
-       "      <th>temperature_c</th>\n",
-       "      <th>fuel_price_usd_per_l</th>\n",
-       "      <th>unemployment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-03-05</td>\n",
-       "      <td>21827.90</td>\n",
-       "      <td>False</td>\n",
-       "      <td>8.055556</td>\n",
-       "      <td>0.693452</td>\n",
-       "      <td>8.106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-04-02</td>\n",
-       "      <td>57258.43</td>\n",
-       "      <td>False</td>\n",
-       "      <td>16.816667</td>\n",
-       "      <td>0.718284</td>\n",
-       "      <td>7.808</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-05-07</td>\n",
-       "      <td>17413.94</td>\n",
-       "      <td>False</td>\n",
-       "      <td>22.527778</td>\n",
-       "      <td>0.748928</td>\n",
-       "      <td>7.808</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-06-04</td>\n",
-       "      <td>17558.09</td>\n",
-       "      <td>False</td>\n",
-       "      <td>27.050000</td>\n",
-       "      <td>0.714586</td>\n",
-       "      <td>7.808</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-07-02</td>\n",
-       "      <td>16333.14</td>\n",
-       "      <td>False</td>\n",
-       "      <td>27.172222</td>\n",
-       "      <td>0.705076</td>\n",
-       "      <td>7.787</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10769</th>\n",
-       "      <td>10769</td>\n",
-       "      <td>39</td>\n",
-       "      <td>A</td>\n",
-       "      <td>99</td>\n",
-       "      <td>2011-12-09</td>\n",
-       "      <td>895.00</td>\n",
-       "      <td>False</td>\n",
-       "      <td>9.644444</td>\n",
-       "      <td>0.834256</td>\n",
-       "      <td>7.716</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10770</th>\n",
-       "      <td>10770</td>\n",
-       "      <td>39</td>\n",
-       "      <td>A</td>\n",
-       "      <td>99</td>\n",
-       "      <td>2012-02-03</td>\n",
-       "      <td>350.00</td>\n",
-       "      <td>False</td>\n",
-       "      <td>15.938889</td>\n",
-       "      <td>0.887619</td>\n",
-       "      <td>7.244</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10771</th>\n",
-       "      <td>10771</td>\n",
-       "      <td>39</td>\n",
-       "      <td>A</td>\n",
-       "      <td>99</td>\n",
-       "      <td>2012-06-08</td>\n",
-       "      <td>450.00</td>\n",
-       "      <td>False</td>\n",
-       "      <td>27.288889</td>\n",
-       "      <td>0.911922</td>\n",
-       "      <td>6.989</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10772</th>\n",
-       "      <td>10772</td>\n",
-       "      <td>39</td>\n",
-       "      <td>A</td>\n",
-       "      <td>99</td>\n",
-       "      <td>2012-07-13</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>False</td>\n",
-       "      <td>25.644444</td>\n",
-       "      <td>0.860145</td>\n",
-       "      <td>6.623</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10773</th>\n",
-       "      <td>10773</td>\n",
-       "      <td>39</td>\n",
-       "      <td>A</td>\n",
-       "      <td>99</td>\n",
-       "      <td>2012-10-05</td>\n",
-       "      <td>915.00</td>\n",
-       "      <td>False</td>\n",
-       "      <td>22.250000</td>\n",
-       "      <td>0.955511</td>\n",
-       "      <td>6.228</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10771 rows × 10 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       Unnamed: 0  store type  department        date  weekly_sales  \\\n",
-       "1               1      1    A           1  2010-03-05      21827.90   \n",
-       "2               2      1    A           1  2010-04-02      57258.43   \n",
-       "3               3      1    A           1  2010-05-07      17413.94   \n",
-       "4               4      1    A           1  2010-06-04      17558.09   \n",
-       "5               5      1    A           1  2010-07-02      16333.14   \n",
-       "...           ...    ...  ...         ...         ...           ...   \n",
-       "10769       10769     39    A          99  2011-12-09        895.00   \n",
-       "10770       10770     39    A          99  2012-02-03        350.00   \n",
-       "10771       10771     39    A          99  2012-06-08        450.00   \n",
-       "10772       10772     39    A          99  2012-07-13          0.06   \n",
-       "10773       10773     39    A          99  2012-10-05        915.00   \n",
-       "\n",
-       "       is_holiday  temperature_c  fuel_price_usd_per_l  unemployment  \n",
-       "1           False       8.055556              0.693452         8.106  \n",
-       "2           False      16.816667              0.718284         7.808  \n",
-       "3           False      22.527778              0.748928         7.808  \n",
-       "4           False      27.050000              0.714586         7.808  \n",
-       "5           False      27.172222              0.705076         7.787  \n",
-       "...           ...            ...                   ...           ...  \n",
-       "10769       False       9.644444              0.834256         7.716  \n",
-       "10770       False      15.938889              0.887619         7.244  \n",
-       "10771       False      27.288889              0.911922         6.989  \n",
-       "10772       False      25.644444              0.860145         6.623  \n",
-       "10773       False      22.250000              0.955511         6.228  \n",
-       "\n",
-       "[10771 rows x 10 columns]"
+       "0        8.082034\n",
+       "1        8.106000\n",
+       "2        7.808000\n",
+       "3        7.808000\n",
+       "4        7.808000\n",
+       "           ...   \n",
+       "10769    7.716000\n",
+       "10770    7.244000\n",
+       "10771    6.989000\n",
+       "10772    6.623000\n",
+       "10773    6.228000\n",
+       "Name: unemployment, Length: 10774, dtype: float64"
       ]
      },
-     "execution_count": 528,
+     "execution_count": 638,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sales_data.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fcf7c89",
+   "metadata": {},
+   "source": [
+    "Identify Duplicate values and remove"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 657,
+   "id": "bbec9f4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        False\n",
+       "1        False\n",
+       "2        False\n",
+       "3         True\n",
+       "4         True\n",
+       "         ...  \n",
+       "10769     True\n",
+       "10770     True\n",
+       "10771     True\n",
+       "10772     True\n",
+       "10773    False\n",
+       "Name: unemployment, Length: 10774, dtype: bool"
+      ]
+     },
+     "execution_count": 657,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " sales_data.duplicated()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 663,
+   "id": "67beec93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3     7.808000\n",
+       "4     7.808000\n",
+       "6     7.787000\n",
+       "7     7.787000\n",
+       "9     7.838000\n",
+       "10    7.838000\n",
+       "12    8.106000\n",
+       "13    8.106000\n",
+       "14    7.808000\n",
+       "15    7.808000\n",
+       "16    7.808000\n",
+       "17    7.787000\n",
+       "18    8.082034\n",
+       "19    7.787000\n",
+       "20    7.838000\n",
+       "21    7.838000\n",
+       "22    7.838000\n",
+       "23    7.742000\n",
+       "24    8.106000\n",
+       "25    8.106000\n",
+       "26    7.808000\n",
+       "27    7.808000\n",
+       "28    7.808000\n",
+       "29    7.787000\n",
+       "30    7.787000\n",
+       "31    7.787000\n",
+       "32    7.838000\n",
+       "33    7.838000\n",
+       "34    7.838000\n",
+       "35    7.742000\n",
+       "36    8.106000\n",
+       "37    8.106000\n",
+       "38    7.808000\n",
+       "39    7.808000\n",
+       "40    7.808000\n",
+       "41    7.787000\n",
+       "42    7.787000\n",
+       "43    7.787000\n",
+       "44    7.838000\n",
+       "45    7.838000\n",
+       "46    7.838000\n",
+       "47    7.742000\n",
+       "48    8.106000\n",
+       "49    8.106000\n",
+       "50    7.808000\n",
+       "51    7.808000\n",
+       "52    7.808000\n",
+       "53    7.787000\n",
+       "54    7.787000\n",
+       "55    7.787000\n",
+       "Name: unemployment, dtype: float64"
+      ]
+     },
+     "execution_count": 663,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicate_rows = sales_data[sales_data.duplicated()]\n",
+    "duplicate_rows.head(50)"
    ]
   }
  ],
