add handling update12

--- a/Project/handling_catagorical_data.ipynb
+++ b/Project/handling_catagorical_data.ipynb
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 636,
+   "execution_count": null,
    "id": "88dcb69d",
    "metadata": {},
    "outputs": [
@@ -1550,15 +1550,15 @@
       "0        8.082034\n",
       "1        8.106000\n",
       "2        7.808000\n",
-      "3        7.808000\n",
-      "4        7.808000\n",
+      "5        7.787000\n",
+      "8        7.838000\n",
       "           ...   \n",
-      "10769    7.716000\n",
-      "10770    7.244000\n",
-      "10771    6.989000\n",
-      "10772    6.623000\n",
+      "10407    7.244000\n",
+      "10408    6.989000\n",
+      "10512    7.716000\n",
+      "10568    6.623000\n",
       "10773    6.228000\n",
-      "Name: unemployment, Length: 10774, dtype: float64\n"
+      "Name: unemployment, Length: 127, dtype: float64\n"
      ]
     }
    ],
@@ -1657,34 +1657,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 657,
+   "execution_count": 665,
    "id": "bbec9f4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        False\n",
-       "1        False\n",
-       "2        False\n",
-       "3         True\n",
-       "4         True\n",
-       "         ...  \n",
-       "10769     True\n",
-       "10770     True\n",
-       "10771     True\n",
-       "10772     True\n",
-       "10773    False\n",
-       "Name: unemployment, Length: 10774, dtype: bool"
+       "np.int64(10647)"
       ]
      },
-     "execution_count": 657,
+     "execution_count": 665,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    " sales_data.duplicated()\n"
+    "sales_data.duplicated().sum()\n"
    ]
   },
   {
@@ -1757,6 +1746,69 @@
    "source": [
     "duplicate_rows = sales_data[sales_data.duplicated()]\n",
     "duplicate_rows.head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 666,
+   "id": "d3312ccf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales_data.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 669,
+   "id": "e56c9901",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 669,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_data.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 668,
+   "id": "b64f7bd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        8.082034\n",
+       "1        8.106000\n",
+       "2        7.808000\n",
+       "5        7.787000\n",
+       "8        7.838000\n",
+       "           ...   \n",
+       "10113    8.177000\n",
+       "10407    7.244000\n",
+       "10408    6.989000\n",
+       "10512    7.716000\n",
+       "10568    6.623000\n",
+       "Name: unemployment, Length: 126, dtype: float64"
+      ]
+     },
+     "execution_count": 668,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_data.head(-1)"
    ]
   }
  ],
